[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psg-safety"
version = "1.0.0"
description = "Professional Safety Guardian - Desktop Application for MEP Construction Safety Management"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.12"
authors = [
    {name = "PSG Development Team", email = "dev@psg-safety.com"}
]
keywords = [
    "safety",
    "construction",
    "MEP",
    "desktop",
    "offline-first",
    "PyQt6",
    "UAE"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Security",
]

dependencies = [
    "PyQt6>=6.6.0",
    "PyQt6-Qt6>=6.6.0",
    "requests>=2.31.0",
    "typing-extensions>=4.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "colorlog>=6.8.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.3.0",
    "pytest>=7.4.4",
    "pytest-qt>=4.2.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.8.0",
]

[project.gui-scripts]
psg = "app.main:main"

[project.scripts]
psg-cli = "app.main:cli_entry"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"*" = ["*.qss", "*.ui", "*.png", "*.ico", "*.svg"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"